<resources>
    <string name="app_name">SmartKitchen</string>

    <!--Content Descriptions-->
    <string name="contentDescAddInv">Add Item to Inventory</string>
    <string name="contentDescAddGrocery">Add Item to Grocery</string>
    <string name="expandArrow">Expand List Item</string>
    <string name="collapseArrow">Collapse List Item</string>

    <!--Titles-->
    <string name="defaultEditTitle">Edit Item</string>
    <string name="defaultViewInfoTitle">Item Information</string>
    <string name="titleAddToInv">Add New Item to Inventory</string>
    <string name="titleAddToGrocery">Add New Item to Grocery List</string>

    <!--Default List Values-->
    <string name="defaultName">Item Name</string>
    <string name="defaultQuantity">Quantity</string>
    <string name="defaultPrice">Item Price</string>
    <string name="defaultIsPossible">Have All Ingredients: </string>
    <string name="defaultPossibleAnswer">Yes</string>

    <!--Field Labels-->
    <string name="labelName">Name:</string>
    <string name="labelQuantity">Quantity:</string>
    <string name="labelUnits">Units:</string>
    <string name="labelThreshold">Threshold Amount:</string>
    <string name="labelQuantityToBuy">Quantity to Buy:</string>
    <string name="labelPrice">Price per Unit:</string>
    <string name="labelCalories">Calories per Unit:</string>
    <string name="labelAllergies">Allergies:</string>

    <!--Checkbox Labels-->
    <string name="checkLactose">Contains Lactose</string>
    <string name="checkFish">Contains Fish</string>
    <string name="checkEggs">Contains Eggs</string>
    <string name="checkGluten">Contains Gluten</string>
    <string name="checkNuts">Contains Nuts</string>
    <string name="checkSoy">Contains Soy</string>

    <!--Edit Text Hints-->
    <string name="hintName">Name</string>
    <string name="hintQuantity">Quantity</string>
    <string name="hintUnits">Units</string>
    <string name="hintQuantityToBuy">Quantity to Buy</string>
    <string name="hintThreshold">Threshold Amount</string>
    <string name="hintPrice">Price per Unit</string>
    <string name="hintCalories">Calories per Unit</string>

    <!--Button Text-->
    <string name="btnCancel">Cancel</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnAdd">Add</string>
    <string name="btnBuy">Buy Item</string>
    <string name="btnEdit">Edit</string>
    <string name="btnRemove">Remove</string>
    <string name="btnAddToGrocery">Add to Grocery List</string>
    <string name="btnBackToList">Back to List</string>
    <string name="btnMakeRecipe">Make</string>

    <!--Other-->
    <string name="enableThresholdText">Enable automatic adding of item to grocery list below given threshold?</string>

    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Purus sit amet luctus venenatis. Arcu bibendum at varius vel pharetra vel turpis nunc. Id diam vel quam elementum. Eu ultrices vitae auctor eu augue. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Vel pretium lectus quam id leo in. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Nunc mattis enim ut tellus elementum sagittis. Enim eu turpis egestas pretium. Morbi tincidunt ornare massa eget. Dui nunc mattis enim ut tellus. Duis ultricies lacus sed turpis tincidunt id.

Consequat interdum varius sit amet mattis vulputate. Feugiat scelerisque varius morbi enim nunc faucibus. Dui accumsan sit amet nulla facilisi morbi. Tellus rutrum tellus pellentesque eu tincidunt tortor. A diam sollicitudin tempor id eu nisl nunc mi. Pharetra vel turpis nunc eget lorem. At consectetur lorem donec massa. Hac habitasse platea dictumst quisque sagittis purus sit. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Tellus at urna condimentum mattis.

Tristique senectus et netus et malesuada fames ac turpis. Id diam maecenas ultricies mi eget mauris pharetra. Egestas diam in arcu cursus euismod quis viverra. Blandit aliquam etiam erat velit. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Congue quisque egestas diam in arcu cursus euismod quis viverra. Quam pellentesque nec nam aliquam sem et tortor consequat. Aliquet nec ullamcorper sit amet risus. Turpis in eu mi bibendum neque egestas congue quisque. Eget nunc lobortis mattis aliquam. Egestas dui id ornare arcu odio ut. Amet volutpat consequat mauris nunc congue nisi vitae suscipit. Eget lorem dolor sed viverra. Amet venenatis urna cursus eget nunc. Parturient montes nascetur ridiculus mus. Blandit massa enim nec dui nunc. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Natoque penatibus et magnis dis parturient montes nascetur. Tempus urna et pharetra pharetra massa massa.

Quis commodo odio aenean sed adipiscing diam donec. Pharetra pharetra massa massa ultricies mi quis hendrerit. Enim ut tellus elementum sagittis vitae et leo duis. Massa sed elementum tempus egestas sed sed risus pretium quam. Aenean sed adipiscing diam donec adipiscing tristique. Vitae tortor condimentum lacinia quis vel eros donec ac odio. Amet volutpat consequat mauris nunc congue nisi. Risus feugiat in ante metus dictum at tempor commodo. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut placerat. Elementum integer enim neque volutpat ac tincidunt vitae semper quis. Sed libero enim sed faucibus turpis in eu. Est pellentesque elit ullamcorper dignissim. Tincidunt ornare massa eget egestas. Placerat vestibulum lectus mauris ultrices eros in. Congue eu consequat ac felis donec et odio. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Vitae proin sagittis nisl rhoncus mattis rhoncus. Non diam phasellus vestibulum lorem sed risus ultricies tristique. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam.

Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Et leo duis ut diam quam nulla. Risus pretium quam vulputate dignissim suspendisse in. Aliquam vestibulum morbi blandit cursus risus at. Nibh cras pulvinar mattis nunc sed blandit libero volutpat sed. Nulla facilisi cras fermentum odio eu feugiat. Nam aliquam sem et tortor consequat id porta. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non. Adipiscing vitae proin sagittis nisl. Sed pulvinar proin gravida hendrerit lectus. Egestas sed sed risus pretium. Sapien nec sagittis aliquam malesuada bibendum. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor. Sapien nec sagittis aliquam malesuada. Feugiat in fermentum posuere urna nec tincidunt praesent semper feugiat. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mauris augue neque gravida in fermentum et.</string>
</resources>